Quitar links y video

--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                     routerLink="/"
                 >
                     <img src="images/logos/BanorteLogoB.png" >
-                    <img src="images/logos/BanorteLogoB.png" alt="logo"> 
+                    <img src="images/logos/BanorteLogoB.png" alt="logo">
                 </a>
                 <button
                     (click)="toggleClass()"
@@ -33,49 +33,48 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Administracion y Liquidez
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-2" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Manejo de Excedentes
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-3" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Pagos
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-4" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Tesoreria Inteligente
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-5" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Banca Transaccional
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-6" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Fondos de Inversión
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/index-7" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Fondos de Inversion
                                     </a>
                                 </li>
-
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a routerLink="/about" routerLinkActive="active" class="nav-link">
+                            <a routerLink="/" class="nav-link">
                                 About Us
                             </a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a routerLink="/ia" routerLinkActive="active" class="nav-link">
                                 IA
@@ -87,37 +86,37 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a routerLink="/about-2" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         About Us - 2
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/personal" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Personal
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/business" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Business
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/how-it-works" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         How It Works
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/team" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Team
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/error-404" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         404 Error Page
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/faq" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         FAQ
                                     </a>
                                 </li>
@@ -127,47 +126,19 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/signup" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Signup
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a routerLink="/contact-2" routerLinkActive="active" class="nav-link">
+                                    <a routerLink="/" class="nav-link">
                                         Contact Us - 2
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a routerLink="/pricing" routerLinkActive="active" class="nav-link">
-                                Pricing
-                            </a>
-                        </li> -->
-                        
-                        <!-- <li class="nav-item">
-                            <a href="javascript:void(0)" class="nav-link">
-                                Blog <i class="fas fa-chevron-down"></i>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item">
-                                    <a routerLink="/blog-grid" routerLinkActive="active" class="nav-link">
-                                        Blog Grid
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a routerLink="/blog-right-sidebar" routerLinkActive="active" class="nav-link">
-                                        Blog Right Sidebar
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a routerLink="/blog-details" routerLinkActive="active" class="nav-link">
-                                        Blog Details
-                                    </a>
-                                </li>
-                            </ul>
-                        </li> -->
                         <li class="nav-item">
-                            <a routerLink="/contact" routerLinkActive="active" class="nav-link">
+                            <a routerLink="/" class="nav-link">
                                 Contact
                             </a>
                         </li>
