--- a/src/app/common/success-story/success-story.component.html
+++ b/src/app/common/success-story/success-story.component.html
@@ -1,67 +1,37 @@
-<div class="success-story-area ptb-70">
-    <div class="container">
-        <div class="section-title">
-            <h2>Business success story</h2>
-            <div class="bar mb-0"></div>
-        </div>
-        <div class="success-story-inner">
-            <div class="success-story-slides">
-                <owl-carousel-o [options]="successStorySlides">
-                    <ng-template carouselSlide>
-                        <div class="single-success-story-box">
-                            <div class="row m-0 align-items-center">
-                                <div class="col-lg-6 col-md-6 p-0">
-                                    <div class="content">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
-                                        <h3>John Smith <span>CTO at EnvyTheme</span></h3>
-                                        <button type="button" class="btn btn-primary popup-youtube" (click)="openPopup()">
-                                            Watch Video
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6 p-0">
-                                    <div class="image">
-                                        <img src="images/success-story1.jpg" alt="image">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </ng-template>
-                    <ng-template carouselSlide>
-                        <div class="single-success-story-box">
-                            <div class="row m-0 align-items-center">
-                                <div class="col-lg-6 col-md-6 p-0">
-                                    <div class="content">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
-                                        <h3>John Smith <span>CTO at EnvyTheme</span></h3>
-                                        <button type="button" class="btn btn-primary popup-youtube" (click)="openPopup()">
-                                            Watch Video
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6 p-0">
-                                    <div class="image">
-                                        <img src="images/success-story1.jpg" alt="image">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </ng-template>
-                </owl-carousel-o>
-            </div>
-        </div>
-    </div>
-</div>
+<div class="global-area ptb-70">
+  <div class="container">
+      <div class="section-title">
+          <h2>Descubre la App de Banorte: Soluciones Financieras al Alcance de tu Mano</h2>
+          <div class="bar"></div>
+      </div>
 
-<!-- Video Popup -->
-<div
-    class="video-popup position-fixed d-flex align-items-center justify-content-center text-center top-0 start-0 end-0 bottom-0"
-    *ngIf="isOpen"
->
-    <div class="popup-inner bg-white position-relative mx-auto">
-        <iframe src="https://www.youtube.com/embed/YDXQ_nociO4" title="Web Design Trends 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <button (click)="closePopup()" type="button" class="close-btn p-0 border-0 d-flex align-items-center justify-content-center rounded-circle">
-            <i class="fa-solid fa-xmark"></i>
-        </button>
-    </div>
+      <div class="row align-items-center">
+          <!-- Información sobre la App -->
+          <div class="col-lg-6 col-md-12">
+              <div class="info-content">
+                  <h3>Gestión Financiera Simplificada</h3>
+                  <p>Con nuestra app, administra tus cuentas, realiza pagos y transferencias de manera segura y rápida, todo desde la comodidad de tu dispositivo móvil.</p>
+
+                  <h3>Experiencia de Usuario Inigualable</h3>
+                  <p>Nuestra interfaz intuitiva está diseñada pensando en ti, para que puedas acceder a todas las funciones que necesitas sin complicaciones.</p>
+
+                  <h3>Acceso Global</h3>
+                  <p>Controla tus cuentas desde cualquier parte del mundo y realiza transacciones en diferentes monedas con solo unos clics.</p>
+
+                  <h3>Seguridad Avanzada</h3>
+                  <p>Contamos con la tecnología más avanzada en seguridad bancaria para que realices tus transacciones con total tranquilidad y protección.</p>
+              </div>
+          </div>
+
+          <!-- Video de la App de Banorte en loop -->
+          <div class="col-lg-6 col-md-12">
+              <div class="video-container text-center">
+                  <video autoplay muted loop style="max-width: 100%; height: auto;">
+                      <source src="images/banorteVideo.mp4" type="video/mp4">
+                      Tu navegador no soporta el elemento de video.
+                  </video>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
