--- a/src/app/common/success-story/success-story.component.scss
+++ b/src/app/common/success-story/success-story.component.scss
@@ -1,232 +1,113 @@
-.success-story-area {
-    border-top: 1px solid #eeeeee;
-}
-.success-story-inner {
-    background-color: #051947;
-    position: relative;
-    z-index: 1;
-    padding: {
-        top: 50px;
-        left: 90px;
-        right: 135px;
-        bottom: 50px;
-    };
-    &::before {
-        top: 0;
-        right: 0;
-        width: 30%;
-        z-index: -1;
-        content: '';
-        height: 100%;
-        position: absolute;
-        background-blend-mode: overlay, screen, overlay, overlay, normal;
-        background: linear-gradient(125deg, #00FF57 0%, #010033 40%, #460043 70%, #F0FFC5 100%), linear-gradient(55deg, #0014C9 0%, #410060 100%), linear-gradient(300deg, #FFC700 0%, #001AFF 100%), radial-gradient(135% 215% at 115% 40%, #393939 0%, #393939 40%, #849561 calc(40% + 1px), #849561 60%, #EED690 calc(60% + 1px), #EED690 80%, #ECEFD8 calc(80% + 1px), #ECEFD8 100%), linear-gradient(125deg, #282D4F 0%, #282D4F 40%, #23103A calc(40% + 1px), #23103A 70%, #A0204C calc(70% + 1px), #A0204C 88%, #FF6C00 calc(88% + 1px), #FF6C00 100%);
-    }
-}
-.single-success-story-box {
-    .content {
-        padding-right: 40px;
+// Variables de colores
+$primary-color: #B90000;  // Rojo Banorte
+$secondary-color: #F1F1F1;  // Gris claro
+$text-color: #333;  // Color del texto
 
-        p {
-            margin: 0;
-            color: var(--whiteColor);
-            font: {
-                size: 22px;
-                weight: 500;
-                family: var(--headingFontFamily);
-            };
-        }
-        h3 {
-            color: var(--whiteColor);
-            margin: {
-                top: 25px;
-                bottom: 0;
-            };
-            font: {
-                size: 15px;
-                weight: 500;
-            };
-            span {
-                font-weight: 300;
-                color: #e7e7e7;
-                display: inline-block;
-            }
-        }
-        .btn {
-            margin-top: 30px;
-        }
-    }
-}
-::ng-deep {
-    .success-story-slides {
-        .owl-theme {
-            .owl-nav {
-                transform: translateY(-50%);
-                position: absolute;
-                margin-top: 0;
-                right: -90px;
-                top: 50%;
-    
-                [class*=owl-] {
-                    padding: 0;
-                    width: 45px;
-                    height: 45px;
-                    margin: 10px 0;
-                    display: block;
-                    font-size: 18px;
-                    line-height: 48px;
-                    border-radius: 50%;
-                    color: var(--blackColor);
-                    transition: var(--transition);
-                    background-color: var(--whiteColor);
-    
-                    &:hover {
-                        background-color: var(--primaryColor);
-                        color: var(--whiteColor);
-                    }
-                }
-            }
-        }
-    }
+// Estilos generales
+body {
+  font-family: 'Roboto', sans-serif;
+  color: $text-color;
+  background-color: $secondary-color;
+  margin: 0;
+  padding: 0;
 }
 
-/* Max width 767px */
-@media only screen and (max-width : 767px) {
-
-    .success-story-inner {
-        text-align: center;
-        padding: {
-            top: 25px;
-            left: 20px;
-            right: 20px;
-            bottom: 25px;
-        };
-        &::before {
-            display: none;
-        }
-    }
-    .single-success-story-box {
-        .content {
-            padding-right: 0;
-
-            p {
-                font-size: 15px;
-            }
-            h3 {
-                margin-top: 20px;
-                font-size: 14px;
-            }
-            .btn {
-                margin-top: 25px;
-            }
-        }
-        .image {
-            margin-top: 30px;
-        }
-    }
-    ::ng-deep {
-        .success-story-slides {
-            .owl-theme {
-                .owl-nav {
-                    top: 0;
-                    right: 0;
-                    margin-top: 25px;
-                    position: relative;
-                    transform: translateY(0);
-    
-                    [class*=owl-] {
-                        width: 35px;
-                        height: 35px;
-                        margin: 0 5px;
-                        font-size: 16px;
-                        line-height: 37px;
-                        display: inline-block;
-                    }
-                }
-            }
-        }
-    }
-
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-/* Min width 576px to Max width 767px */
-@media only screen and (min-width : 576px) and (max-width : 767px) {}
-
-/* Min width 768px to Max width 991px */
-@media only screen and (min-width : 768px) and (max-width : 991px) {
-
-    .success-story-inner {
-        padding: {
-            top: 30px;
-            left: 30px;
-            right: 80px;
-            bottom: 30px;
-        };
-    }
-    .single-success-story-box {
-        .content {
-            padding-right: 20px;
-
-            p {
-                font-size: 15px;
-            }
-            h3 {
-                font-size: 14px;
-            }
-            .btn {
-                margin-top: 25px;
-            }
-        }
-    }
-    ::ng-deep {
-        .success-story-slides {
-            .owl-theme {
-                .owl-nav {
-                    right: -60px;
-    
-                    [class*=owl-] {
-                        width: 35px;
-                        height: 35px;
-                        font-size: 18px;
-                        line-height: 39px;
-                    }
-                }
-            }
-        }
-    }
-
+// Sección principal
+.global-area {
+  background-color: white;
+  padding: 70px 0;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 
-/* Min width 992px to Max width 1199px */
-@media only screen and (min-width : 992px) and (max-width : 1199px) {
-
-    .success-story-inner {
-        padding: {
-            left: 50px;
-            right: 100px;
-        };
-    }
-    .single-success-story-box {
-        .content {
-            p {
-                font-size: 19px;
-            }
-        }
-    }
-    ::ng-deep {
-        .success-story-slides {
-            .owl-theme {
-                .owl-nav {
-                    right: -78px;
-                }
-            }
-        }
-    }
-
+.section-title h2 {
+  font-size: 2.5rem;
+  color: $primary-color;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-/* Min width 1200px to Max width 1399px */
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {}
+.section-title .bar {
+  width: 50px;
+  height: 4px;
+  background-color: $primary-color;
+  margin: 10px auto;
+}
 
-/* Min width 1600px */
-@media only screen and (min-width: 1600px) {}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.info-content {
+  padding: 20px;
+}
+
+.info-content h3 {
+  font-size: 1.8rem;
+  color: $primary-color;
+  margin-bottom: 10px;
+}
+
+.info-content p {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+
+// Video container
+.video-container {
+  padding: 20px;
+  text-align: center;
+
+  video {
+    border-radius: 10px;
+    border: 2px solid $primary-color;
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+// Botones de la app
+button {
+  background-color: $primary-color;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: darken($primary-color, 10%);
+  }
+}
+
+// Bordes menos filosos
+.global-area, .info-content, .video-container {
+  border-radius: 15px;
+}
+
+// Responsividad para pantallas pequeñas
+@media (max-width: 768px) {
+  .row {
+    flex-direction: column;
+  }
+
+  .info-content {
+    text-align: center;
+    padding: 10px;
+  }
+
+  .video-container {
+    margin-top: 20px;
+  }
+}
